# cuda-optimizer

./: Dockerfile.cuda-dev  LICENSE  MANIFEST.in  README.md  TASKS.md  TASKS_original.md  pyproject.toml
.github/workflows/: test.yml
dashboard/: app.py
docs/: adam_fused.md  amp_wrapper.md  autotuner.md  conf.py  cuda_cache.md  custom_ops.md  index.rst  migration_guide.md  optimization_targets.md  quickstart.md  selective_checkpoint.md  tensor_parallel.md  troubleshooting.md
docs/api/: cuda_optimizer.checkpoint.rst  cuda_optimizer.fusion.rst  cuda_optimizer.kernels.rst  cuda_optimizer.memory.rst  cuda_optimizer.monitoring.rst  cuda_optimizer.optim.rst  cuda_optimizer.parallel.rst  cuda_optimizer.profiling.rst  cuda_optimizer.rst  cuda_optimizer.tuner.rst  index.rst
logs/: iteration-1.md  iteration-10.md  iteration-11.md  iteration-12.md  iteration-2.md  iteration-3.md  iteration-4.md  iteration-5.md  iteration-6.md  iteration-7.md  iteration-8.md  iteration-9.md
notebooks/: 01_basics.ipynb  02_transformers.ipynb  03_distributed.ipynb
scripts/: benchmark_custom_ops.py  checkpoint_memory_benchmark.py  run_baseline.py  tune_kernels.py
src/cuda_optimizer/: __init__.py
src/cuda_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cuda_optimizer/checkpoint/: __init__.py  compiler.py  selective_checkpoint.py
src/cuda_optimizer/fusion/: __init__.py  adam_fused.cu  adam_fused.py  optim_fusion.py
src/cuda_optimizer/kernels/: __init__.py  custom_ops.cu  custom_ops.py
src/cuda_optimizer/memory/: __init__.py  cuda_cache.py  expiry_policy.py
src/cuda_optimizer/monitoring/: __init__.py  dashboard.py
src/cuda_optimizer/optim/: __init__.py  amp_wrapper.py
src/cuda_optimizer/parallel/: __init__.py  tensor_parallel.py
src/cuda_optimizer/profiling/: __init__.py  base_profiler.py
src/cuda_optimizer/tuner/: __init__.py  autotuner.py
tests/integration/: test_full_pipeline.py  test_fusion_performance.py  test_tensor_parallel_gpt2.py
tests/unit/: test_custom_ops.py  test_memory.py
tests/unit/checkpoint/: test_selective_checkpoint.py
tests/unit/fusion/: test_optim_fusion.py
tests/unit/monitoring/: test_dashboard.py
tests/unit/optim/: test_amp_wrapper.py
tests/unit/parallel/: test_tensor_parallel.py
tests/unit/profiling/: test_base_profiler.py
tests/unit/tuner/: test_autotuner.py
